--- a/auto2.properties
+++ b/auto2.properties
@@ -1,9 +1,9 @@
-Model = Ford's Focus Wagon ZTW
-Maker = Ford
-BasePrice = 18445
+Model = Honda Accord
+Maker = Honda
+BasePrice = 15000
 OptionSetSize = 5
 ColorOptionName = Color
-ColorOptionSize = 10
+ColorOptionSize = 8
 ColorOption1 = Fort Knox Gold Clearcoat Metallic
 ColorOptionPrice1 = 0
 ColorOption2 = Liquid Grey Clearcoat Metallic
@@ -20,10 +20,6 @@ ColorOption7 = Twilight Blue Clearcoat Metallic
 ColorOptionPrice7 = 0
 ColorOption8 = CD Silver Clearcoat Metallic
 ColorOptionPrice8 = 0
-ColorOption9 = Pitch Black Clearcoat
-ColorOptionPrice9 = 0
-ColorOption10 = Cloud 9 White Clearcoat
-ColorOptionPrice10 = 0
 TransmissionOptionName = Transmission
 TransmissionOptionSize = 2
 TransmissionOption1 = Automatic
@@ -37,16 +33,16 @@ Brakes_TractionControlOptionPrice1 = 0
 Brakes_TractionControlOption2 = ABS
 Brakes_TractionControlOptionPrice2 = 400
 Brakes_TractionControlOption3 = ABS with Advance Trac
-Brakes_TractionControlOptionPrice3 = 1625
+Brakes_TractionControlOptionPrice3 = 1600
 SideImpactAirBagsOptionName = Side Impact Air Bags
 SideImpactAirBagsOptionSize = 2
 SideImpactAirBagsOption1 = Air Bags Present
-SideImpactAirBagsOptionPrice1 = 350
+SideImpactAirBagsOptionPrice1 = 300
 SideImpactAirBagsOption2 = Air Bags Not Present
 SideImpactAirBagsOptionPrice2 = 0
 PowerMoonroofOptionName = Power Moonroof
 PowerMoonroofOptionSize = 2
 PowerMoonroofOption1 = Power Moonroof Present
-PowerMoonroofOptionPrice1 = 595
+PowerMoonroofOptionPrice1 = 300
 PowerMoonroofOption2 = Power Moonroof Not Present
 PowerMoonroofOptionPrice2 = 0
